--- a/seção-25-nextjs/fundamentos/package.json
+++ b/seção-25-nextjs/fundamentos/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "fs": "^0.0.1-security",
     "next": "15.5.2",
+    "path": "^0.12.7",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
