--- a/seção-32-Express/package.json
+++ b/seção-32-Express/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon",
+    "production": "pm2 start index.js --name appx-backend"
   },
   "author": "",
   "license": "ISC",
